# schwab-rs

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  SKILL.md
.config/: nextest.toml
.github/instructions/: schwab-agent.instructions.md
.github/workflows/: audit.yml  cd.yml  ci.yml  release-plz.yml  release.yml
docs/: README.md  auth.md  market_data.openapi.json  streaming_documentation.html  trader_api.openapi.json
examples/: auth.rs  quotes.rs
src/: AGENTS.md  auth.rs  client.rs  config.rs  error.rs  lib.rs  market_data_api.rs  options.rs  order_builder.rs  query.rs  streaming_api.rs  test_support.rs  trader_api.rs
src/auth/: callback.rs  mod.rs  oauth.rs  provider.rs  store.rs  tests.rs
src/models/: AGENTS.md  enums.rs  market_data.rs  mod.rs  trader.rs
src/models/streaming/: acct_activity.rs  book.rs  chart_equity.rs  chart_futures.rs  equities.rs  forex.rs  futures.rs  futures_options.rs  mod.rs  options.rs
src/order_builder/: convert.rs
src/stream_session/: mod.rs  protocol.rs
src/streaming/: mod.rs  protocol.rs  transport.rs
tests/: cli_smoke.rs  integration.rs
tests/fixtures/: quote_equity.json  streaming_account_activity_data.json  streaming_chart_equity_data.json  streaming_chart_futures_data.json  streaming_equity_data.json  streaming_heartbeat.json  streaming_login_denied.json  streaming_login_success.json  streaming_nasdaq_book_data.json  streaming_nyse_book_data.json  streaming_options_book_data.json  streaming_options_data.json  streaming_screener_equity_data.json  streaming_screener_option_data.json  token_response.json  token_response_no_refresh.json
