[package]
name = "schwab"
version = "0.4.0"
edition = "2024"
rust-version = "1.96"
description = "Unofficial Rust client library for the Schwab API, unaffiliated with Schwab brokerage or thinkorswim"
license = "Apache-2.0"
repository = "https://github.com/major/schwab-rs"
homepage = "https://github.com/major/schwab-rs"
readme = "README.md"
keywords = ["schwab", "trading", "finance", "api-client"]
categories = ["api-bindings", "finance"]

[[bin]]
name = "schwab-agent"
path = "src/bin/schwab-agent/main.rs"
required-features = ["cli"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "env"], optional = true }
clap_complete = { version = "4.6.3", optional = true }
dirs = { version = "6.0.0", optional = true }
futures-util = "0.3"
open = { version = "5.3.5", optional = true }
rand = "0.10.1"
rcgen = "0.14.8"
reqwest = { version = "0.13.3", default-features = false, features = ["form", "json", "query", "rustls"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_with = "3.20.0"
sha2 = { version = "0.11", optional = true }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
tracing = "0.1"
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
urlencoding = "2.1.3"
rust_decimal = { version = "1.42", features = ["serde-with-float"], optional = true }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"], optional = true }

[features]
default = ["cli"]
cli = [
    "dep:clap",
    "dep:clap_complete",
    "dep:dirs",
    "dep:open",
    "dep:sha2",
    "dep:tracing-subscriber",
]
decimal = ["dep:rust_decimal"]
test_online = []

[dev-dependencies]
assert-json-diff = "2"
assert_cmd = "=2.2.2"
mockito = "1"
predicates = "=3.1.4"
tempfile = "=3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.dist]
inherits = "release"
lto = "thin"
